fixed spacing on photo media query.

--- a/assets/style.css
+++ b/assets/style.css
@@ -594,7 +594,9 @@ form{
     margin-left: 75px;
 }
 
-
+img {
+margin-left: 20px;
+}
 
 body{
     margin-left: 0;
